fix visability issues on mobiles site

--- a/styles/360px.css
+++ b/styles/360px.css
@@ -55,8 +55,8 @@
 
 .header-text p {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 100;
-    font-size: 12px;
+    font-weight: 400;
+    font-size: 13px;
     color: white;
 }
 
@@ -95,11 +95,11 @@
 }
 
 .contact p {
-  margin: 0 0 5px 10px;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 100;
-  font-size: 12px;
+    margin: 0 0 5px 20px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
 }
 
 .about {
@@ -130,7 +130,8 @@
     padding-left: 23px;
     padding-top: 3px;
     z-index: 2;
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: 300;
 }
 
 .about svg {
@@ -146,7 +147,7 @@
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 100;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
     width: 90%;
     height: 100%;
